--- a/contact.html
+++ b/contact.html
@@ -2,32 +2,36 @@
 <html>
 
 <head>
-    <title>Mi Primer Website</title>
-    <link rel="stylesheet" type="text/css" href="styles.css">
+  <title>Mi Primer Website</title>
+  <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 
 <body>
-    <div class="container-nav">
-        <nav class="navbar" role="navigation">
-          <a href="#" class="brand">Mi página web</a>
-          <ul class="nav-links">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="services.html">Servicios</a></li>
-            <li><a href="about.html">Acerca de mí</a></li>
-            <li><a href="contact.html">Contacto</a></li>
-          </ul>
-        </nav>
-        <button class="button-menu-toggle">Menu</button>
-      </div>
+  <header class="container-nav">
+    <nav class="navbar" role="navigation">
+      <a href="#" class="brand">Mi página web</a>
+      <ul class="nav-links">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="services.html">Servicios</a></li>
+        <li><a href="about.html">Acerca de mí</a></li>
+        <li><a href="contact.html">Contacto</a></li>
+      </ul>
+    </nav>
+    <button class="button-menu-toggle">Menu</button>
+  </header>
+  <main>
     <div class=container>
-        <h1>Contacto</h1>
+      <h1>Contacto</h1>
+      <div class="greeting">
         <p>¡Contáctanos para cualquier consulta o solicitud de información!</p>
-        <form id="myForm">
-          <label for="email">Correo electrónico:</label>
-          <input type="email" id="email" name="email" required>
-          <button type="submit">Enviar</button>
-        </form>
+      </div>
+      <form id="myForm">
+        <label for="email">Correo electrónico:</label>
+        <input type="email" id="email" name="email" required>
+        <button type="submit">Enviar</button>
+      </form>
     </div>
+  </main>
 </body>
 
 </html>
