primeros cambios en el footer

--- a/index.html
+++ b/index.html
@@ -50,8 +50,7 @@
   </main>
   <script src="script.js"></script>
   <footer>
-    <h2>Website de Rasheed Castillo</h2>
-    <h2>Todos los derechos reservados</h2>
+    <h2>Website de Rasheed Castillo. Todos los derechos reservados</h2>
     <button onClick="showAlert()" aria-label="Haz clic en mí">¡Haz clic en mí!</button>
   </footer>
 </body>
