ajustes de main, header y footer

--- a/contact.html
+++ b/contact.html
@@ -32,6 +32,10 @@
       </form>
     </div>
   </main>
+  <footer>
+    <h2>Website de Rasheed Castillo. Todos los derechos reservados</h2>
+    <button onClick="showAlert()" aria-label="Haz clic en mí">¡Haz clic en mí!</button>
+  </footer>
 </body>
 
 </html>
