--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-    <div class="container-nav">
+    <header class="container-nav">
         <nav class="navbar" role="navigation">
             <a href="#" class="brand">Mi página web</a>
             <ul class="nav-links">
@@ -18,23 +18,29 @@
             </ul>
         </nav>
         <button class="button-menu-toggle">Menu</button>
-    </div>
-    <div class=container>
-        <h1>Acerca de</h1>
-        <p>¡Bienvenido a nuestra página “Acerca de”! Aquí, aprenderás más sobre nuestra empresa y los servicios que
-            ofrecemos.</p>
-        <div class="images">
-            <div class="image-1">
-                <img src="Castillo dev Associates.png" alt="Logo 1" />
-            </div>
-            <div class="image-2">
-                <img src="Sin título-1.png" alt="Logo 2" />
-            </div>
-            <div class="image-3">
-                <img src="Viajes David SA - RC - DC.png" alt="Logo 3" />
+    </header>
+    <main>
+        <div class=container>
+            <h1>Acerca de</h1>
+            <p>¡Bienvenido a nuestra página “Acerca de”! Aquí, aprenderás más sobre nuestra empresa y los servicios que
+                ofrecemos.</p>
+            <div class="images">
+                <div class="image-1">
+                    <img src="Castillo dev Associates.png" alt="Logo 1" />
+                </div>
+                <div class="image-2">
+                    <img src="Sin título-1.png" alt="Logo 2" />
+                </div>
+                <div class="image-3">
+                    <img src="Viajes David SA - RC - DC.png" alt="Logo 3" />
+                </div>
             </div>
         </div>
-    </div>
+    </main>
+    <footer>
+        <h2>Website de Rasheed Castillo. Todos los derechos reservados</h2>
+        <button onClick="showAlert()" aria-label="Haz clic en mí">¡Haz clic en mí!</button>
+    </footer>
 </body>
 
 </html>
