arreglo en la barra de navegación, regreso a la pagina principal

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <header class="container-nav">
     <nav class="navbar">
-      <a href="#" class="brand">Mi página web</a>
+      <a href="index.html" class="brand">Mi página web</a>
       <ul class="nav-links">
         <li><a href="index.html">Home</a></li>
         <li><a href="services.html">Servicios</a></li>
